--- a/games/pacpedia/index.html
+++ b/games/pacpedia/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pacpédia contra os moderadores Wiki</title>
     <style>
         body {
@@ -12,32 +12,32 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: flex-start;
+            justify-content: center;
             min-height: 100vh;
             margin: 0;
+            overflow: hidden;
         }
 
+        /* Variáveis CSS para cores do labirinto - para cores aleatórias por fase */
         :root {
             --wall-color: #050;
             --path-color: #1a1a1a;
             --game-border-color: #0f0;
         }
 
-        #game-info {
-            display: flex;
-            justify-content: space-between;
-            width: 90%;
-            max-width: 600px;
-            margin-top: 10px;
-            font-size: 1.2em;
-            color: #0f0;
-        }
-
         #game-area {
             display: flex;
             gap: 20px;
             align-items: flex-start;
-            margin-top: 20px;
+        }
+
+        #game-info {
+            display: flex;
+            justify-content: space-between;
+            width: 100%;
+            margin-bottom: 10px;
+            font-size: 1.2em;
+            color: #0f0;
         }
 
         #game-container {
@@ -45,14 +45,20 @@
             background-color: #333;
             padding: 10px;
             display: grid;
+            gap: 0;
             position: relative;
             box-shadow: 0 0 15px rgba(0, 255, 0, 0.5);
+            outline: none;
         }
 
         .cell {
             width: 30px;
             height: 30px;
             box-sizing: border-box;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 0.8em;
         }
 
         .wall {
@@ -65,16 +71,14 @@
         }
 
         .player {
-            background-image: url('wazzimagiygg.jpg');
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
+            background-color: #ff0;
             border: 2px solid #fff;
             border-radius: 5px;
             position: absolute;
             width: 26px;
             height: 26px;
             transition: left 0.1s linear, top 0.1s linear;
+            box-sizing: border-box;
             z-index: 10;
         }
 
@@ -97,7 +101,7 @@
         }
 
         .ghost {
-            background-image: url('chronus.jpg');
+            background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/d/df/Wikipedia_wordmark.svg/320px-Wikipedia_wordmark.svg.png');
             background-size: cover;
             background-repeat: no-repeat;
             background-position: center;
@@ -107,11 +111,12 @@
             width: 26px;
             height: 26px;
             transition: left 0.2s linear, top 0.2s linear;
+            box-sizing: border-box;
             z-index: 8;
         }
 
         .ghost.scared {
-            filter: brightness(1.5) saturate(0.5);
+            background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/e/e0/Wiki_logo.svg/320px-Wiki_logo.svg.png');
             animation: flashScared 0.8s infinite alternate;
         }
 
@@ -130,18 +135,19 @@
             margin-top: 10px;
         }
 
-        button {
-            margin-top: 15px;
+        #start-button, #name-input-button, #resume-button {
+            margin-top: 20px;
             padding: 10px 20px;
-            font-size: 1em;
+            font-size: 1.5em;
             background-color: #0a0;
             color: #eee;
             border: none;
             border-radius: 5px;
             cursor: pointer;
+            transition: background-color 0.2s;
         }
 
-        button:hover {
+        #start-button:hover, #name-input-button:hover, #resume-button:hover {
             background-color: #070;
         }
 
@@ -164,18 +170,23 @@
         }
 
         #high-scores-container {
+            margin-left: 30px;
             background-color: #333;
             border: 2px solid #0f0;
             padding: 15px;
             box-shadow: 0 0 10px rgba(0, 255, 0, 0.4);
             border-radius: 8px;
             width: 250px;
+            box-sizing: border-box;
         }
 
         #high-scores-container h2 {
             color: #0f0;
             text-align: center;
             margin-top: 0;
+            margin-bottom: 15px;
+            border-bottom: 1px solid #070;
+            padding-bottom: 10px;
         }
 
         #high-scores-list {
@@ -185,90 +196,53 @@
         }
 
         #high-scores-list li {
-            padding: 5px 0;
+            padding: 8px 0;
             border-bottom: 1px dashed #444;
             display: flex;
             justify-content: space-between;
+            font-size: 1em;
         }
 
-        #main-menu {
-            margin-top: 30px;
-            background-color: #111;
-            border: 1px solid #0f0;
-            padding: 15px;
-            border-radius: 8px;
-            width: 90%;
-            max-width: 500px;
+        #high-scores-list li:last-child {
+            border-bottom: none;
         }
 
-        #main-menu summary {
-            cursor: pointer;
-            color: #0f0;
+        #high-scores-list li .player-name {
+            color: #fff;
         }
 
-        #main-menu textarea {
-            font-family: monospace;
-            background-color: #000;
-            color: #0f0;
-            border: 1px solid #0f0;
-            padding: 5px;
-            margin-top: 10px;
-            width: 100%;
+        #high-scores-list li .player-score {
+            color: #ff0;
+            font-weight: bold;
         }
     </style>
 </head>
 <body>
     <h1>Pacpédia contra os moderadores Wiki</h1>
-
     <div id="game-info">
         <div id="score-display">Pontos: 0</div>
         <div id="lives-display">Vidas: ❤️ ❤️ ❤️</div>
     </div>
-
     <div id="game-area">
-        <div id="game-container"></div>
-
+        <div id="game-container">
+        </div>
         <div id="high-scores-container">
             <h2>Recordes</h2>
-            <ul id="high-scores-list"></ul>
-            <button onclick="resetHighScores()">Resetar Recordes</button>
+            <ul id="high-scores-list">
+            </ul>
         </div>
     </div>
-
     <div id="message-display">Use as setas do teclado para mover. Clique em "Iniciar Jogo" para começar!</div>
+    <button id="start-button">Iniciar Jogo</button>
+    <button id="resume-button" style="display: none;">Voltar a Jogar</button>
+    <button id="developer-button">Desenvolvedor: Invencível</button> <div id="name-input-container">
 
-    <div id="message-display">Use as setas do teclado para mover. Clique em "Iniciar Jogo" para começar!</div>
-
-    <!-- Nome para recorde -->
     <div id="name-input-container">
         <p>Parabéns! Você fez um novo recorde!</p>
         <input type="text" id="player-name-input" placeholder="Seu nome">
         <button id="name-input-button">Salvar Recorde</button>
     </div>
 
-    <!-- Menu Inicial -->
-    <div id="main-menu">
-        <button onclick="startGame()">Iniciar Jogo</button>
-        <details>
-            <summary>Configurações ></summary>
-            <label>Dificuldade:
-                <select id="difficulty-select">
-                    <option value="easy">Fácil</option>
-                    <option value="medium" selected>Média</option>
-                    <option value="hard">Difícil</option>
-                </select>
-            </label>
-            <br><br>
-            <button onclick="resetHighScores()">Apagar Recordes</button>
-            <br><br>
-            <label>Adicione o jogo ao seu site:</label>
-            <textarea readonly><iframe src="https://seudominio.com/pacpedia.html" width="600" height="500"></iframe></textarea>
-        </details>
-    </div>
-
-    <button id="developer-button">Desenvolvedor: Invencível</button>
-
-    <!-- Script do jogo -->
     <script src="script.js"></script>
 </body>
 </html>
