--- a/artigosocial/Index.html
+++ b/artigosocial/Index.html
@@ -712,7 +712,7 @@ h1
 	{mso-style-priority:9;
 	mso-style-unhide:no;
 	mso-style-qformat:yes;
-	mso-style-link:"TÌtulo 1 Char";
+	mso-style-link:"T√≠tulo 1 Char";
 	mso-style-next:Normal;
 	margin-top:18.0pt;
 	margin-right:0cm;
@@ -743,7 +743,7 @@ h2
 	{mso-style-noshow:yes;
 	mso-style-priority:9;
 	mso-style-qformat:yes;
-	mso-style-link:"TÌtulo 2 Char";
+	mso-style-link:"T√≠tulo 2 Char";
 	mso-style-next:Normal;
 	margin-top:8.0pt;
 	margin-right:0cm;
@@ -774,7 +774,7 @@ h3
 	{mso-style-noshow:yes;
 	mso-style-priority:9;
 	mso-style-qformat:yes;
-	mso-style-link:"TÌtulo 3 Char";
+	mso-style-link:"T√≠tulo 3 Char";
 	mso-style-next:Normal;
 	margin-top:8.0pt;
 	margin-right:0cm;
@@ -805,7 +805,7 @@ h4
 	{mso-style-noshow:yes;
 	mso-style-priority:9;
 	mso-style-qformat:yes;
-	mso-style-link:"TÌtulo 4 Char";
+	mso-style-link:"T√≠tulo 4 Char";
 	mso-style-next:Normal;
 	margin-top:4.0pt;
 	margin-right:0cm;
@@ -837,7 +837,7 @@ h5
 	{mso-style-noshow:yes;
 	mso-style-priority:9;
 	mso-style-qformat:yes;
-	mso-style-link:"TÌtulo 5 Char";
+	mso-style-link:"T√≠tulo 5 Char";
 	mso-style-next:Normal;
 	margin-top:4.0pt;
 	margin-right:0cm;
@@ -868,7 +868,7 @@ h6
 	{mso-style-noshow:yes;
 	mso-style-priority:9;
 	mso-style-qformat:yes;
-	mso-style-link:"TÌtulo 6 Char";
+	mso-style-link:"T√≠tulo 6 Char";
 	mso-style-next:Normal;
 	margin-top:2.0pt;
 	margin-right:0cm;
@@ -900,7 +900,7 @@ p.MsoHeading7, li.MsoHeading7, div.MsoHeading7
 	{mso-style-noshow:yes;
 	mso-style-priority:9;
 	mso-style-qformat:yes;
-	mso-style-link:"TÌtulo 7 Char";
+	mso-style-link:"T√≠tulo 7 Char";
 	mso-style-next:Normal;
 	margin-top:2.0pt;
 	margin-right:0cm;
@@ -930,7 +930,7 @@ p.MsoHeading8, li.MsoHeading8, div.MsoHeading8
 	{mso-style-noshow:yes;
 	mso-style-priority:9;
 	mso-style-qformat:yes;
-	mso-style-link:"TÌtulo 8 Char";
+	mso-style-link:"T√≠tulo 8 Char";
 	mso-style-next:Normal;
 	margin:0cm;
 	line-height:107%;
@@ -958,7 +958,7 @@ p.MsoHeading9, li.MsoHeading9, div.MsoHeading9
 	{mso-style-noshow:yes;
 	mso-style-priority:9;
 	mso-style-qformat:yes;
-	mso-style-link:"TÌtulo 9 Char";
+	mso-style-link:"T√≠tulo 9 Char";
 	mso-style-next:Normal;
 	margin:0cm;
 	line-height:107%;
@@ -985,7 +985,7 @@ p.MsoTitle, li.MsoTitle, div.MsoTitle
 	{mso-style-priority:10;
 	mso-style-unhide:no;
 	mso-style-qformat:yes;
-	mso-style-link:"TÌtulo Char";
+	mso-style-link:"T√≠tulo Char";
 	mso-style-next:Normal;
 	margin-top:0cm;
 	margin-right:0cm;
@@ -1011,7 +1011,7 @@ p.MsoTitleCxSpFirst, li.MsoTitleCxSpFirst, div.MsoTitleCxSpFirst
 	{mso-style-priority:10;
 	mso-style-unhide:no;
 	mso-style-qformat:yes;
-	mso-style-link:"TÌtulo Char";
+	mso-style-link:"T√≠tulo Char";
 	mso-style-next:Normal;
 	mso-style-type:export-only;
 	margin:0cm;
@@ -1035,7 +1035,7 @@ p.MsoTitleCxSpMiddle, li.MsoTitleCxSpMiddle, div.MsoTitleCxSpMiddle
 	{mso-style-priority:10;
 	mso-style-unhide:no;
 	mso-style-qformat:yes;
-	mso-style-link:"TÌtulo Char";
+	mso-style-link:"T√≠tulo Char";
 	mso-style-next:Normal;
 	mso-style-type:export-only;
 	margin:0cm;
@@ -1059,7 +1059,7 @@ p.MsoTitleCxSpLast, li.MsoTitleCxSpLast, div.MsoTitleCxSpLast
 	{mso-style-priority:10;
 	mso-style-unhide:no;
 	mso-style-qformat:yes;
-	mso-style-link:"TÌtulo Char";
+	mso-style-link:"T√≠tulo Char";
 	mso-style-next:Normal;
 	mso-style-type:export-only;
 	margin-top:0cm;
@@ -1086,7 +1086,7 @@ p.MsoSubtitle, li.MsoSubtitle, div.MsoSubtitle
 	{mso-style-priority:11;
 	mso-style-unhide:no;
 	mso-style-qformat:yes;
-	mso-style-link:"SubtÌtulo Char";
+	mso-style-link:"Subt√≠tulo Char";
 	mso-style-next:Normal;
 	margin-top:0cm;
 	margin-right:0cm;
@@ -1214,7 +1214,7 @@ p.MsoQuote, li.MsoQuote, div.MsoQuote
 	{mso-style-priority:29;
 	mso-style-unhide:no;
 	mso-style-qformat:yes;
-	mso-style-link:"CitaÁ„o Char";
+	mso-style-link:"Cita√ß√£o Char";
 	mso-style-next:Normal;
 	margin-top:8.0pt;
 	margin-right:0cm;
@@ -1244,7 +1244,7 @@ p.MsoIntenseQuote, li.MsoIntenseQuote, div.MsoIntenseQuote
 	{mso-style-priority:30;
 	mso-style-unhide:no;
 	mso-style-qformat:yes;
-	mso-style-link:"CitaÁ„o Intensa Char";
+	mso-style-link:"Cita√ß√£o Intensa Char";
 	mso-style-next:Normal;
 	margin-top:18.0pt;
 	margin-right:43.2pt;
@@ -1298,11 +1298,11 @@ span.MsoIntenseReference
 	letter-spacing:.25pt;
 	font-weight:bold;}
 span.Ttulo1Char
-	{mso-style-name:"TÌtulo 1 Char";
+	{mso-style-name:"T√≠tulo 1 Char";
 	mso-style-priority:9;
 	mso-style-unhide:no;
 	mso-style-locked:yes;
-	mso-style-link:"TÌtulo 1";
+	mso-style-link:"T√≠tulo 1";
 	mso-ansi-font-size:20.0pt;
 	mso-bidi-font-size:20.0pt;
 	font-family:"Calibri Light",sans-serif;
@@ -1318,12 +1318,12 @@ span.Ttulo1Char
 	mso-themecolor:accent1;
 	mso-themeshade:191;}
 span.Ttulo2Char
-	{mso-style-name:"TÌtulo 2 Char";
+	{mso-style-name:"T√≠tulo 2 Char";
 	mso-style-noshow:yes;
 	mso-style-priority:9;
 	mso-style-unhide:no;
 	mso-style-locked:yes;
-	mso-style-link:"TÌtulo 2";
+	mso-style-link:"T√≠tulo 2";
 	mso-ansi-font-size:16.0pt;
 	mso-bidi-font-size:16.0pt;
 	font-family:"Calibri Light",sans-serif;
@@ -1339,12 +1339,12 @@ span.Ttulo2Char
 	mso-themecolor:accent1;
 	mso-themeshade:191;}
 span.Ttulo3Char
-	{mso-style-name:"TÌtulo 3 Char";
+	{mso-style-name:"T√≠tulo 3 Char";
 	mso-style-noshow:yes;
 	mso-style-priority:9;
 	mso-style-unhide:no;
 	mso-style-locked:yes;
-	mso-style-link:"TÌtulo 3";
+	mso-style-link:"T√≠tulo 3";
 	mso-ansi-font-size:14.0pt;
 	mso-bidi-font-size:14.0pt;
 	font-family:"Times New Roman",serif;
@@ -1356,12 +1356,12 @@ span.Ttulo3Char
 	mso-themecolor:accent1;
 	mso-themeshade:191;}
 span.Ttulo4Char
-	{mso-style-name:"TÌtulo 4 Char";
+	{mso-style-name:"T√≠tulo 4 Char";
 	mso-style-noshow:yes;
 	mso-style-priority:9;
 	mso-style-unhide:no;
 	mso-style-locked:yes;
-	mso-style-link:"TÌtulo 4";
+	mso-style-link:"T√≠tulo 4";
 	font-family:"Times New Roman",serif;
 	mso-fareast-font-family:"Times New Roman";
 	mso-fareast-theme-font:major-fareast;
@@ -1372,12 +1372,12 @@ span.Ttulo4Char
 	mso-themeshade:191;
 	font-style:italic;}
 span.Ttulo5Char
-	{mso-style-name:"TÌtulo 5 Char";
+	{mso-style-name:"T√≠tulo 5 Char";
 	mso-style-noshow:yes;
 	mso-style-priority:9;
 	mso-style-unhide:no;
 	mso-style-locked:yes;
-	mso-style-link:"TÌtulo 5";
+	mso-style-link:"T√≠tulo 5";
 	font-family:"Times New Roman",serif;
 	mso-fareast-font-family:"Times New Roman";
 	mso-fareast-theme-font:major-fareast;
@@ -1387,12 +1387,12 @@ span.Ttulo5Char
 	mso-themecolor:accent1;
 	mso-themeshade:191;}
 span.Ttulo6Char
-	{mso-style-name:"TÌtulo 6 Char";
+	{mso-style-name:"T√≠tulo 6 Char";
 	mso-style-noshow:yes;
 	mso-style-priority:9;
 	mso-style-unhide:no;
 	mso-style-locked:yes;
-	mso-style-link:"TÌtulo 6";
+	mso-style-link:"T√≠tulo 6";
 	font-family:"Times New Roman",serif;
 	mso-fareast-font-family:"Times New Roman";
 	mso-fareast-theme-font:major-fareast;
@@ -1403,12 +1403,12 @@ span.Ttulo6Char
 	mso-themetint:166;
 	font-style:italic;}
 span.Ttulo7Char
-	{mso-style-name:"TÌtulo 7 Char";
+	{mso-style-name:"T√≠tulo 7 Char";
 	mso-style-noshow:yes;
 	mso-style-priority:9;
 	mso-style-unhide:no;
 	mso-style-locked:yes;
-	mso-style-link:"TÌtulo 7";
+	mso-style-link:"T√≠tulo 7";
 	font-family:"Times New Roman",serif;
 	mso-fareast-font-family:"Times New Roman";
 	mso-fareast-theme-font:major-fareast;
@@ -1418,12 +1418,12 @@ span.Ttulo7Char
 	mso-themecolor:text1;
 	mso-themetint:166;}
 span.Ttulo8Char
-	{mso-style-name:"TÌtulo 8 Char";
+	{mso-style-name:"T√≠tulo 8 Char";
 	mso-style-noshow:yes;
 	mso-style-priority:9;
 	mso-style-unhide:no;
 	mso-style-locked:yes;
-	mso-style-link:"TÌtulo 8";
+	mso-style-link:"T√≠tulo 8";
 	font-family:"Times New Roman",serif;
 	mso-fareast-font-family:"Times New Roman";
 	mso-fareast-theme-font:major-fareast;
@@ -1434,12 +1434,12 @@ span.Ttulo8Char
 	mso-themetint:216;
 	font-style:italic;}
 span.Ttulo9Char
-	{mso-style-name:"TÌtulo 9 Char";
+	{mso-style-name:"T√≠tulo 9 Char";
 	mso-style-noshow:yes;
 	mso-style-priority:9;
 	mso-style-unhide:no;
 	mso-style-locked:yes;
-	mso-style-link:"TÌtulo 9";
+	mso-style-link:"T√≠tulo 9";
 	font-family:"Times New Roman",serif;
 	mso-fareast-font-family:"Times New Roman";
 	mso-fareast-theme-font:major-fareast;
@@ -1449,11 +1449,11 @@ span.Ttulo9Char
 	mso-themecolor:text1;
 	mso-themetint:216;}
 span.TtuloChar
-	{mso-style-name:"TÌtulo Char";
+	{mso-style-name:"T√≠tulo Char";
 	mso-style-priority:10;
 	mso-style-unhide:no;
 	mso-style-locked:yes;
-	mso-style-link:TÌtulo;
+	mso-style-link:T√≠tulo;
 	mso-ansi-font-size:28.0pt;
 	mso-bidi-font-size:28.0pt;
 	font-family:"Calibri Light",sans-serif;
@@ -1468,11 +1468,11 @@ span.TtuloChar
 	letter-spacing:-.5pt;
 	mso-font-kerning:14.0pt;}
 span.SubttuloChar
-	{mso-style-name:"SubtÌtulo Char";
+	{mso-style-name:"Subt√≠tulo Char";
 	mso-style-priority:11;
 	mso-style-unhide:no;
 	mso-style-locked:yes;
-	mso-style-link:SubtÌtulo;
+	mso-style-link:Subt√≠tulo;
 	mso-ansi-font-size:14.0pt;
 	mso-bidi-font-size:14.0pt;
 	font-family:"Times New Roman",serif;
@@ -1485,21 +1485,21 @@ span.SubttuloChar
 	mso-themetint:166;
 	letter-spacing:.75pt;}
 span.CitaoChar
-	{mso-style-name:"CitaÁ„o Char";
+	{mso-style-name:"Cita√ß√£o Char";
 	mso-style-priority:29;
 	mso-style-unhide:no;
 	mso-style-locked:yes;
-	mso-style-link:CitaÁ„o;
+	mso-style-link:Cita√ß√£o;
 	color:#404040;
 	mso-themecolor:text1;
 	mso-themetint:191;
 	font-style:italic;}
 span.CitaoIntensaChar
-	{mso-style-name:"CitaÁ„o Intensa Char";
+	{mso-style-name:"Cita√ß√£o Intensa Char";
 	mso-style-priority:30;
 	mso-style-unhide:no;
 	mso-style-locked:yes;
-	mso-style-link:"CitaÁ„o Intensa";
+	mso-style-link:"Cita√ß√£o Intensa";
 	color:#2F5496;
 	mso-themecolor:accent1;
 	mso-themeshade:191;
@@ -1599,7 +1599,7 @@ table.MsoTableGrid
 
 <div class=WordSection1>
 
-<p class=MsoNormal><!--[if gte vml 1]><v:rect id="Ret‚ngulo_x0020_1" o:spid="_x0000_s1027"
+<p class=MsoNormal><!--[if gte vml 1]><v:rect id="Ret√¢ngulo_x0020_1" o:spid="_x0000_s1027"
  style='position:absolute;margin-left:158.25pt;margin-top:76.5pt;width:153pt;
  height:23.25pt;z-index:251659264;visibility:visible;mso-wrap-style:square;
  mso-width-percent:0;mso-height-percent:0;mso-wrap-distance-left:9pt;
@@ -1646,7 +1646,7 @@ bFBLBQYAAAAABAAEAPMAAAC8BQAAAAA=
    <tr>
     <td><![endif]>
     <div>
-    <p class=MsoNormal align=center style='text-align:center'>UID Usu·rio
+    <p class=MsoNormal align=center style='text-align:center'>UID Usu√°rio
     Google</p>
     </div>
     <![if !mso]></td>
@@ -1758,7 +1758,7 @@ eG1sUEsFBgAAAAAEAAQA8wAAAL4FAAAAAA==
    </tr>
   </table>
   <![endif]></v:textbox>
-</v:rect><v:rect id="Ret‚ngulo_x0020_6" o:spid="_x0000_s1037" style='position:absolute;
+</v:rect><v:rect id="Ret√¢ngulo_x0020_6" o:spid="_x0000_s1037" style='position:absolute;
  margin-left:-13.85pt;margin-top:196.4pt;width:152.6pt;height:366.75pt;
  z-index:251676672;visibility:visible;mso-wrap-style:square;
  mso-height-percent:0;mso-wrap-distance-left:9pt;mso-wrap-distance-top:0;
@@ -1810,7 +1810,7 @@ bWxQSwUGAAAAAAQABADzAAAAvQUAAAAA
    </tr>
   </table>
   <![endif]></v:textbox>
-</v:rect><v:rect id="Ret‚ngulo_x0020_2" o:spid="_x0000_s1026" style='position:absolute;
+</v:rect><v:rect id="Ret√¢ngulo_x0020_2" o:spid="_x0000_s1026" style='position:absolute;
  margin-left:157.5pt;margin-top:105.75pt;width:358.5pt;height:458.25pt;
  z-index:251670528;visibility:visible;mso-wrap-style:square;
  mso-wrap-distance-left:9pt;mso-wrap-distance-top:0;mso-wrap-distance-right:9pt;
@@ -1848,7 +1848,7 @@ ACv+PTVMAgAA7QQAAA4AAAAAAAAAAAAAAAAALgIAAGRycy9lMm9Eb2MueG1sUEsBAi0AFAAGAAgA
 AAAhACB4I/ngAAAADQEAAA8AAAAAAAAAAAAAAAAApgQAAGRycy9kb3ducmV2LnhtbFBLBQYAAAAA
 BAAEAPMAAACzBQAAAAA=
 " fillcolor="white [3201]" strokecolor="#70ad47 [3209]" strokeweight="1pt"/><v:rect
- id="Ret‚ngulo_x0020_3" o:spid="_x0000_s1029" style='position:absolute;
+ id="Ret√¢ngulo_x0020_3" o:spid="_x0000_s1029" style='position:absolute;
  margin-left:171.75pt;margin-top:119.25pt;width:331.5pt;height:198pt;z-index:251671552;
  visibility:visible;mso-wrap-style:square;mso-wrap-distance-left:9pt;
  mso-wrap-distance-top:0;mso-wrap-distance-right:9pt;
@@ -1933,13 +1933,13 @@ bFBLBQYAAAAABAAEAPMAAAC8BQAAAAA=
     <td><![endif]>
     <div>
     <p class=MsoNormal align=center style='text-align:center'>Postar mensagens
-    p˙blica<o:p></o:p></p>
+    p√∫blica<o:p></o:p></p>
     </div>
     <![if !mso]></td>
    </tr>
   </table>
   <![endif]></v:textbox>
-</v:rect><v:rect id="Ret‚ngulo_x0020_4" o:spid="_x0000_s1031" style='position:absolute;
+</v:rect><v:rect id="Ret√¢ngulo_x0020_4" o:spid="_x0000_s1031" style='position:absolute;
  margin-left:183pt;margin-top:129.75pt;width:312pt;height:145.5pt;z-index:251674624;
  visibility:visible;mso-wrap-style:square;mso-wrap-distance-left:9pt;
  mso-wrap-distance-top:0;mso-wrap-distance-right:9pt;
@@ -1977,7 +1977,7 @@ IQDFXoI4TgIAAO0EAAAOAAAAAAAAAAAAAAAAAC4CAABkcnMvZTJvRG9jLnhtbFBLAQItABQABgAI
 AAAAIQAsjurj3wAAAAsBAAAPAAAAAAAAAAAAAAAAAKgEAABkcnMvZG93bnJldi54bWxQSwUGAAAA
 AAQABADzAAAAtAUAAAAA
 " fillcolor="white [3201]" strokecolor="#70ad47 [3209]" strokeweight="1pt"/><v:rect
- id="Ret‚ngulo_x0020_5" o:spid="_x0000_s1032" style='position:absolute;
+ id="Ret√¢ngulo_x0020_5" o:spid="_x0000_s1032" style='position:absolute;
  margin-left:172.5pt;margin-top:330.75pt;width:330pt;height:217.5pt;z-index:251675648;
  visibility:visible;mso-wrap-style:square;mso-wrap-distance-left:9pt;
  mso-wrap-distance-top:0;mso-wrap-distance-right:9pt;
@@ -2074,7 +2074,7 @@ bWxQSwUGAAAAAAQABADzAAAAvQUAAAAA
    <tr>
     <td><![endif]>
     <div>
-    <p class=MsoNormal align=center style='text-align:center'>ConfiguraÁ„o<o:p></o:p></p>
+    <p class=MsoNormal align=center style='text-align:center'>Configura√ß√£o<o:p></o:p></p>
     </div>
     <![if !mso]></td>
    </tr>
@@ -2237,7 +2237,7 @@ SwUGAAAAAAQABADzAAAAugUAAAAA
    </tr>
   </table>
   <![endif]></v:textbox>
-</v:rect><v:roundrect id="Ret‚ngulo_x003a__x0020_Cantos_x0020_Arredondados_x0020_7"
+</v:rect><v:roundrect id="Ret√¢ngulo_x003a__x0020_Cantos_x0020_Arredondados_x0020_7"
  o:spid="_x0000_s1038" style='position:absolute;margin-left:-4.1pt;
  margin-top:-8.6pt;width:515.25pt;height:67.5pt;z-index:251677696;visibility:visible;
  mso-wrap-style:square;mso-wrap-distance-left:9pt;mso-wrap-distance-top:0;
@@ -2443,7 +2443,7 @@ bWxQSwUGAAAAAAQABADzAAAAvQUAAAAA
    <tr>
     <td><![endif]>
     <div>
-    <p class=MsoNormal align=center style='text-align:center'>UID Usu·rio Cliente<o:p></o:p></p>
+    <p class=MsoNormal align=center style='text-align:center'>UID Usu√°rio Cliente<o:p></o:p></p>
     </div>
     <![if !mso]></td>
    </tr>
@@ -2472,8 +2472,8 @@ top:-12px;width:712px;height:768px'>
   <td></td>
   <td colspan=7 align=left valign=top><img width=692 height=95
   src="Index_arquivos/image001.png"
-  alt="Ret‚ngulo: Cantos Arredondados: WIKI NOT PEDIA SOCIAL&#13;&#10;&#13;&#10;"
-  v:shapes="Ret‚ngulo_x003a__x0020_Cantos_x0020_Arredondados_x0020_7"></td>
+  alt="Ret√¢ngulo: Cantos Arredondados: WIKI NOT PEDIA SOCIAL&#13;&#10;&#13;&#10;"
+  v:shapes="Ret√¢ngulo_x003a__x0020_Cantos_x0020_Arredondados_x0020_7"></td>
  </tr>
  <tr>
   <td height=18></td>
@@ -2485,11 +2485,11 @@ top:-12px;width:712px;height:768px'>
   v:shapes="_x0000_s1033"></td>
   <td colspan=2></td>
   <td colspan=2 align=left valign=top><img width=210 height=37
-  src="Index_arquivos/image003.png" alt="Caixa de Texto: UID Usu·rio Google"
-  v:shapes="Ret‚ngulo_x0020_1"></td>
+  src="Index_arquivos/image003.png" alt="Caixa de Texto: UID Usu√°rio Google"
+  v:shapes="Ret√¢ngulo_x0020_1"></td>
   <td></td>
   <td colspan=3 align=left valign=top><img width=210 height=37
-  src="Index_arquivos/image004.png" alt="Caixa de Texto: UID Usu·rio Cliente"
+  src="Index_arquivos/image004.png" alt="Caixa de Texto: UID Usu√°rio Cliente"
   v:shapes="_x0000_s1028"></td>
  </tr>
  <tr>
@@ -2505,7 +2505,7 @@ top:-12px;width:712px;height:768px'>
   <td height=35></td>
   <td colspan=3></td>
   <td colspan=4 rowspan=7 align=left valign=top><img width=480 height=613
-  src="Index_arquivos/image006.png" v:shapes="Ret‚ngulo_x0020_2 Ret‚ngulo_x0020_3 _x0000_s1030 Ret‚ngulo_x0020_4 Ret‚ngulo_x0020_5 _x0000_s1039 _x0000_s1040 _x0000_s1041 _x0000_s1042"></td>
+  src="Index_arquivos/image006.png" v:shapes="Ret√¢ngulo_x0020_2 Ret√¢ngulo_x0020_3 _x0000_s1030 Ret√¢ngulo_x0020_4 Ret√¢ngulo_x0020_5 _x0000_s1039 _x0000_s1040 _x0000_s1041 _x0000_s1042"></td>
  </tr>
  <tr>
   <td height=1></td>
@@ -2531,7 +2531,7 @@ top:-12px;width:712px;height:768px'>
  <tr>
   <td height=494></td>
   <td colspan=2 rowspan=2 align=left valign=top><img width=210 height=495
-  src="Index_arquivos/image009.png" v:shapes="Ret‚ngulo_x0020_6"></td>
+  src="Index_arquivos/image009.png" v:shapes="Ret√¢ngulo_x0020_6"></td>
  </tr>
  <tr>
   <td height=1></td>
