--- a/games/firebase/index.html
+++ b/games/firebase/index.html
@@ -1,20 +1,37 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu Primeiro FPS em HTML</title>
+    <title>Solitaire (Paciência)</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="game-container">
-        <div id="crosshair"></div>
-        <div id="ui-elements">
-            <p>Vida: <span id="player-health">100</span></p>
+        <div id="top-area">
+            <div id="deck-container" class="pile">
+                <div id="deck" class="card back"></div>
+            </div>
+            <div id="waste-pile" class="pile"></div>
+            <div id="foundation-piles">
+                <div class="foundation-pile pile" id="foundation-1"></div>
+                <div class="foundation-pile pile" id="foundation-2"></div>
+                <div class="foundation-pile pile" id="foundation-3"></div>
+                <div class="foundation-pile pile" id="foundation-4"></div>
+            </div>
+        </div>
+
+        <div id="tableau-area">
+            <div class="tableau-pile pile" id="tableau-1"></div>
+            <div class="tableau-pile pile" id="tableau-2"></div>
+            <div class="tableau-pile pile" id="tableau-3"></div>
+            <div class="tableau-pile pile" id="tableau-4"></div>
+            <div class="tableau-pile pile" id="tableau-5"></div>
+            <div class="tableau-pile pile" id="tableau-6"></div>
+            <div class="tableau-pile pile" id="tableau-7"></div>
         </div>
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.165.0/three.min.js"></script>
-    <script src="script.js" type="module"></script>
+    <script src="script.js"></script>
 </body>
 </html>
