--- a/games/index.html
+++ b/games/index.html
@@ -119,6 +119,16 @@
                 status: "Em Desenvolvimento",
                 versao: "0.1.2"
             },
+
+            {
+                nome: "WIKI ZERO FPS",
+                descricao: "Caia em mapas aleatorios para lutar em bloco de firebase",
+                path: "./firebase/",
+                imageUrl: "https://i.imgur.com/your-fantasyrealm-cover.png", // Substitua
+                status: "Em Desenvolvimento",
+                versao: "0.1.2"
+            },
+            
             {
                 nome: "Radio Terror",
                 descricao: "Manipule a maquina de radioterapia temida da Therac-25, mas tenha paciencia para isso",
