--- a/games/tetris/index.html
+++ b/games/tetris/index.html
@@ -1,1 +1,15 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <title>Tetris Beta</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <h1>Tetris Beta 1</h1>
+  <canvas id="tetris" width="240" height="400"></canvas>
+  <p>Pontuação: <span id="score">0</span></p>
+  <script src="tetris.js"></script>
+</body>
+</html>
 
