--- a/games/index.html
+++ b/games/index.html
@@ -128,6 +128,15 @@
                 status: "Em Desenvolvimento",
                 versao: "0.1.2"
             },
+
+            {
+                nome: "Tetris HTML ",
+                descricao: "Jogue o jogo Tetris HTML",
+                path: "./tetris/",
+                imageUrl: "https://i.imgur.com/your-fantasyrealm-cover.png", // Substitua
+                status: "Em Desenvolvimento",
+                versao: "0.1.2"
+            },
             
             {
                 nome: "Radio Terror",
