--- a/games/index.html
+++ b/games/index.html
@@ -137,6 +137,15 @@
                 status: "Em Desenvolvimento",
                 versao: "0.1.2"
             },
+
+            {
+                nome: "Maze ",
+                descricao: "Labirinto",
+                path: "./maze/",
+                imageUrl: "https://i.imgur.com/your-fantasyrealm-cover.png", // Substitua
+                status: "Em Desenvolvimento",
+                versao: "0.1.2"
+            },
             
             {
                 nome: "Radio Terror",
