--- a/index.html
+++ b/index.html
@@ -279,10 +279,8 @@
             <span class="mdl-layout-title">Navegação</span>
             <nav class="mdl-navigation">
                 <a class="mdl-navigation__link" href="#" onclick="loadPage('recepcao.html', false)">Página Inicial</a>
+                <a class="mdl-navigation__link" href="#" onclick="loadPage('./transparencia/', false)">Transparência</a>
                 <a class="mdl-navigation__link" href="#" onclick="loadPage('./games/', false)">Jogos Gratuitos</a>
-		<a class="mdl-navigation__link" href="#" onclick="loadPage('./novapostagem/', false)">Adicionar nova postagem</a>
-		<a class="mdl-navigation__link" href="#" onclick="loadPage('./games/', false)">Jogos Gratuitos</a>
-		<a class="mdl-navigation__link" href="#" onclick="loadPage('./games/', false)">Jogos Gratuitos</a>
             </nav>
         </div>
         <main class="mdl-layout__content">
